# defect_scanner

./: .gitignore  ReadMe.txt  pipeline.config
cvStudy/: CMakeLists.txt  main.cpp
dataset/annotations/: 1.xml  111.xml  12.xml  2.xml  22.xml
training/scripts/: create_tfrecord.py
